# AngelGame

./: CMakeLists.txt  buildAndRun.sh  debug.sh  release.sh  run.sh
.github/workflows/: cmake-single-platform.yml
src/: angelic.cpp
